[gd_scene load_steps=4 format=3 uid="uid://bm705m1t82hk4"]

[ext_resource type="Script" path="res://scenes/level_03/flamethrower.gd" id="1_pogrw"]

[sub_resource type="Gradient" id="Gradient_o8fon"]
colors = PackedColorArray(1, 0.909804, 0.0313726, 1, 1, 0, 0, 1)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_xm1l2"]
points = PackedVector2Array(0, 0, 0, 0, 0, 0)

[node name="Flamethrower" type="Area2D"]
collision_layer = 4
script = ExtResource("1_pogrw")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 1000
lifetime_randomness = 1.0
direction = Vector2(0, 1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
color_ramp = SubResource("Gradient_o8fon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_xm1l2")
disabled = true

[node name="FlameOnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FlameOffTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="FlameOnTimer" to="." method="_on_flame_on_timer_timeout"]
[connection signal="timeout" from="FlameOffTimer" to="." method="_on_flame_off_timer_timeout"]
